Bug 744063 - Pass Y' texture size rather than picture size to Nv3DV.  r=bas a=akeybl